--- a/APP-UI/package.json
+++ b/APP-UI/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.6",
+    "chart.js": "^4.4.7",
     "express": "^4.18.2",
     "flag-icons": "^7.2.3",
     "ngx-toastr": "^19.0.0",
