--- a/APP-UI/package.json
+++ b/APP-UI/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.3.6",
     "@swimlane/ngx-charts": "^21.1.2",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "express": "^4.18.2",
     "flag-icons": "^7.2.3",
     "ngx-toastr": "^19.0.0",
